--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,6 @@
+ktor_version=2.3.1
+kotlin_version=1.8.22
+logback_version=1.2.11
 kotlin.code.style=official
+exposed_version=0.41.1
+koin_version=3.2.2
