--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
     "mysql2": "^3.4.3",
+    "nodemailer": "^6.9.3",
     "sequelize": "^6.32.1"
   },
   "devDependencies": {
