Se modifica las funcionalidad de enviar mail para verificar usuario y reestablecer contraseña

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "^1.10.0",
     "mysql2": "^3.5.2",
     "nodemailer": "^6.9.4",
+    "pug": "^3.0.2",
     "sequelize": "^6.32.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
