--- a/.env
+++ b/.env
@@ -1,13 +1,11 @@
 PORT = 4000
-BACKEND_URL= http://localhost
+BACKEND_URL= https://buddy-app1.loca.lt
 
 USER= b59176a577f953
 PASSWORD=1ecab0e5
 DATABASE= heroku_0112fbf8f733ea4
 TOKEN_SECRET= aplicación_buddy!
 
-MAIL_USER= cb5c8b0b890dd5
-MAIL_PASS= 74bc46a790235d
-MAIL_HOST= sandbox.smtp.mailtrap.io
-MAIL_PORT= 2525
+MAIL_USER= projectapplicationbuddy@gmail.com
+MAIL_PASS= vmggiykubqlxkezy
 
