Implementacion de roles y permisos

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT = 4000
-BACKEND_URL= https://buddy-app1.loca.lt
+BACKEND_URL= https://b49c-181-91-230-36.ngrok-free.app
 
 USER= b59176a577f953
 PASSWORD=1ecab0e5
