--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT = 4000
-BACKEND_URL= https://9223-181-91-230-36.ngrok-free.app
+BACKEND_URL= https://buddy-app2.loca.lt
 
 USER= b59176a577f953
 PASSWORD=1ecab0e5
